--- a/Source/src/main/webapp/views/events/viewevent.html
+++ b/Source/src/main/webapp/views/events/viewevent.html
@@ -1,108 +1,80 @@
 <div>
+    <div class="panel panel-default myPanel">
+        <div class="panel-heading myPanelHeading">Your Event</div>
+        <table class="table table-striped">
+            <tbody>
+            <!-- Event Name Section -->
+            <tr>
+                <td><strong>Event Name</strong></td>
+                <td>{{event.title}}</td>
+            </tr>
 
-    <!-- Event Name Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Event Name</h3>
-        </div>
-        <div class="panel-body">
-            {{event.title}}
-        </div>
-    </div>
+            <!-- Event Description Section -->
+            <tr>
+                <td><strong>Description</strong></td>
+                <td>{{event.description}}</td>
+            </tr>
 
-    <!-- Event Description Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Description</h3>
-        </div>
-        <div class="panel-body">
-            {{event.description}}
-        </div>
-    </div>
-
-    <!-- Event Location Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Location</h3>
-        </div>
-        <div class="panel-body">
-            {{event.location}}
-        </div>
-    </div>
+            <!-- Event Location Section -->
+            <tr>
+                <td><strong>Location</strong></td>
+                <td>{{event.location}}</td>
+            </tr>
 
 
-    <!-- Event Time Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <span class="glyphicon glyphicon-calendar"></span>
-            <h3 class="panel-title">Event Time</h3>
-        </div>
-        <div class="panel-body">
-            {{event.startdate}} to {{event.enddate}}
-        </div>
-    </div>
+            <!-- Event Time Section -->
+            <tr>
+                <td><strong>Event Time</strong></td>
+                <td>{{event.startdate}} to {{event.enddate}}</td>
+            </tr>
 
-    <!-- Event Category Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Category</h3>
-        </div>
-        <div class="panel-body">
-            {{event.category}}
-        </div>
-    </div>
+            <!-- Event Category Section -->
+            <tr>
+                <td><strong>Category</strong></td>
+                <td>{{event.category}}</td>
+            </tr>
 
-    <!-- Event Type Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Event Type</h3>
-        </div>
-        <div class="panel-body">
-            {{event.type}}
-        </div>
-    </div>
+            <!-- Event Type Section -->
+            <tr>
+                <td><strong>Event Type</strong></td>
+                <td>{{event.type}}</td>
+            </tr>
 
-    <!-- Event Users Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Attendees</h3>
-        </div>
-        <div class="panel-body">
-
-            <!-- List group -->
-            <ul class="list-group">
-                <div ng-repeat="user in registrations">
-                    <li class="list-group-item">{{user.firstName + " " + user.lastName}}</li>
-                </div>
-            </ul>
-        </div>
-    </div>
+            <!-- Event Users Section -->
+            <tr>
+                <td><strong>Attendees</strong></td>
+                <td>
+                    <!-- List group -->
+                    <ul class="list-group">
+                        <div ng-repeat="user in registrations">
+                            <li class="list-group-item">{{user.firstName + " " + user.lastName}}</li>
+                        </div>
+                    </ul>
+                </td>
+            </tr>
 
 
-    <!-- Event Food Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Food being brought</h3>
-        </div>
-        <div class="panel-body">
+            <!-- Event Food Section -->
+            <tr>
+                <td><strong>Food</strong></td>
+                <td>
+                    <!-- List group -->
+                    <ul class="list-group">
+                        <div ng-repeat="foodItem in food">
+                            <li class="list-group-item">{{foodItem.name}}</li>
+                        </div>
+                    </ul>
+                </td>
+            </tr>
 
-            <!-- List group -->
-            <ul class="list-group">
-                <div ng-repeat="foodItem in food">
-                    <li class="list-group-item">{{foodItem.name}}</li>
-                </div>
-            </ul>
-        </div>
-    </div>
+            <!-- Event Type Section -->
+            <tr>
+                <td><strong>Organizer</strong></td>
+                <td>{{owner.firstName + " " + owner.lastName}}</td>
+            </tr>
 
-    <!-- Event Type Section -->
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h3 class="panel-title">Organizer</h3>
-        </div>
-        <div class="panel-body">
-            {{owner.firstName + " " + owner.lastName}}
-        </div>
+            </tbody>
+        </table>
     </div>
 
 </div>
