--- a/Source/src/main/webapp/views/user/updateprofile.html
+++ b/Source/src/main/webapp/views/user/updateprofile.html
@@ -16,8 +16,8 @@
 
 -->
 
-<div class="panel panel-primary">
-    <div class="panel-heading">{{pageConfig.panelTitle}}</div>
+<div class="panel panel-primary myPanel">
+    <div class="panel-heading myPanelHeading">{{pageConfig.panelTitle}}</div>
 
     <form ng-submit="updateProfile()">
         <table class="block table table-condensed table-striped">
@@ -128,7 +128,7 @@
             </tbody>
         </table>
 <div class="panel-footer">
-    <button type="submit" class="btn btn-default">Save</button>
+    <button type="submit" class="btn">Save</button>
 </div>
 
     </form>
