--- a/Source/src/main/webapp/css/SogetiStyle.css
+++ b/Source/src/main/webapp/css/SogetiStyle.css
@@ -1,6 +1,11 @@
 /*
 *	Additions by Julie Rogers for New Hire Training Academy 2015 Capstone
 */
+
+.borderless tbody tr td, .borderless thead tr th {
+    border: none;
+}
+
  .myPanelHeading {
     color: #fff !important;
     background-color: #ee4427 !important;
